vfda/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vfda-be
  namespace: default
  labels:
    app: vfda-be
    service: vfda-be
    deploy_by: thai
spec:
  type: ClusterIP 
  ports:
    - name: http
      protocol: HTTP
      port: 80      
      targetPort: 80
  selector:
    app: vfda-be
